// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borders renders correctly when an outer border is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c3 {
  display: inline-block;
}

.c7 {
  padding: 0.5rem;
}

.c5 {
  border: unset;
}

.c5 {
  border-bottom: 2px solid #b3b3b3;
}

.c6 {
  font-weight: bold;
  padding: 0.5rem;
}

.c4 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c2 {
  border: 1px solid #b3b3b3;
  border-radius: 5px;
  padding: 0.25rem 0.5rem;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 c1"
  >
    <table
      class="c4 c1"
    >
      <thead
        class="c5 c1"
      >
        <tr
          class="c1"
        >
          <th
            class="c6 c1"
          >
            Name
          </th>
          <th
            class="c6 c1"
          >
            Quantity
          </th>
          <th
            class="c6 c1"
          >
            Price
          </th>
        </tr>
      </thead>
      <tbody
        class="c1"
      >
        <tr
          class="c1"
        >
          <td
            class="c7 c1"
          >
            Nike
          </td>
          <td
            class="c7 c1"
          >
            3
          </td>
          <td
            class="c7 c1"
          >
            $9.00
          </td>
        </tr>
        <tr
          class="c1"
        >
          <td
            class="c7 c1"
          >
            Adidas
          </td>
          <td
            class="c7 c1"
          >
            4
          </td>
          <td
            class="c7 c1"
          >
            $12.00
          </td>
        </tr>
        <tr
          class="c1"
        >
          <td
            class="c7 c1"
          >
            North Face
          </td>
          <td
            class="c7 c1"
          >
            5
          </td>
          <td
            class="c7 c1"
          >
            $15.00
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`borders renders correctly when row borders are set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c5 {
  font-weight: bold;
  padding: 0.5rem;
}

.c6 .c4 {
  border-bottom: 1px solid #b3b3b3;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <thead
      class="c3 c1"
    >
      <tr
        class="c4 c1"
      >
        <th
          class="c5 c1"
        >
          Name
        </th>
        <th
          class="c5 c1"
        >
          Quantity
        </th>
        <th
          class="c5 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c6 c1"
    >
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          Nike
        </td>
        <td
          class="c7 c1"
        >
          3
        </td>
        <td
          class="c7 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          Adidas
        </td>
        <td
          class="c7 c1"
        >
          4
        </td>
        <td
          class="c7 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          North Face
        </td>
        <td
          class="c7 c1"
        >
          5
        </td>
        <td
          class="c7 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly for a basic table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c4 {
  font-weight: bold;
  padding: 0.5rem;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <thead
      class="c3 c1"
    >
      <tr
        class="c1"
      >
        <th
          class="c4 c1"
        >
          Name
        </th>
        <th
          class="c4 c1"
        >
          Quantity
        </th>
        <th
          class="c4 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c1"
    >
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Nike
        </td>
        <td
          class="c5 c1"
        >
          3
        </td>
        <td
          class="c5 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Adidas
        </td>
        <td
          class="c5 c1"
        >
          4
        </td>
        <td
          class="c5 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          North Face
        </td>
        <td
          class="c5 c1"
        >
          5
        </td>
        <td
          class="c5 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly for a full width table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c4 {
  font-weight: bold;
  padding: 0.5rem;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c2 {
  width: 100%;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <thead
      class="c3 c1"
    >
      <tr
        class="c1"
      >
        <th
          class="c4 c1"
        >
          Name
        </th>
        <th
          class="c4 c1"
        >
          Quantity
        </th>
        <th
          class="c4 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c1"
    >
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Nike
        </td>
        <td
          class="c5 c1"
        >
          3
        </td>
        <td
          class="c5 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Adidas
        </td>
        <td
          class="c5 c1"
        >
          4
        </td>
        <td
          class="c5 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          North Face
        </td>
        <td
          class="c5 c1"
        >
          5
        </td>
        <td
          class="c5 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly for a hoverable table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c5 {
  font-weight: bold;
  padding: 0.5rem;
}

.c8 .c4 {
  border-bottom: 1px solid #b3b3b3;
}

.c9 .c6 .c4:nth-child(even) {
  background-color: #f7f7f7;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c2 .c6 .c4:hover {
  background-color: #f2f2f2 !important;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <thead
      class="c3 c1"
    >
      <tr
        class="c4 c1"
      >
        <th
          class="c5 c1"
        >
          Name
        </th>
        <th
          class="c5 c1"
        >
          Quantity
        </th>
        <th
          class="c5 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c6 c1"
    >
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          Nike
        </td>
        <td
          class="c7 c1"
        >
          3
        </td>
        <td
          class="c7 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          Adidas
        </td>
        <td
          class="c7 c1"
        >
          4
        </td>
        <td
          class="c7 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          North Face
        </td>
        <td
          class="c7 c1"
        >
          5
        </td>
        <td
          class="c7 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly for a striped table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c5 {
  font-weight: bold;
  padding: 0.5rem;
}

.c8 .c4 {
  border-bottom: 1px solid #b3b3b3;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c2 .c6 .c4:nth-child(even) {
  background-color: #f7f7f7;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <thead
      class="c3 c1"
    >
      <tr
        class="c4 c1"
      >
        <th
          class="c5 c1"
        >
          Name
        </th>
        <th
          class="c5 c1"
        >
          Quantity
        </th>
        <th
          class="c5 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c6 c1"
    >
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          Nike
        </td>
        <td
          class="c7 c1"
        >
          3
        </td>
        <td
          class="c7 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          Adidas
        </td>
        <td
          class="c7 c1"
        >
          4
        </td>
        <td
          class="c7 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c4 c1"
      >
        <td
          class="c7 c1"
        >
          North Face
        </td>
        <td
          class="c7 c1"
        >
          5
        </td>
        <td
          class="c7 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly for a table with a bottom caption 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c3 {
  caption-side: bottom;
}

.c8 {
  padding: 0.5rem;
}

.c4 {
  border: unset;
}

.c4 {
  border-bottom: 2px solid #b3b3b3;
}

.c6 {
  font-weight: bold;
  padding: 0.5rem;
}

.c9 .c5 {
  border-bottom: 1px solid #b3b3b3;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c10 .c7 .c5:nth-child(even) {
  background-color: #f7f7f7;
}

.c11 .c7 .c5:hover {
  background-color: #f2f2f2 !important;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <caption
      class="c3 c1"
      style="position: bottom;"
    >
      Fannypacks
    </caption>
    <thead
      class="c4 c1"
    >
      <tr
        class="c5 c1"
      >
        <th
          class="c6 c1"
        >
          Name
        </th>
        <th
          class="c6 c1"
        >
          Quantity
        </th>
        <th
          class="c6 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c7 c1"
    >
      <tr
        class="c5 c1"
      >
        <td
          class="c8 c1"
        >
          Nike
        </td>
        <td
          class="c8 c1"
        >
          3
        </td>
        <td
          class="c8 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c5 c1"
      >
        <td
          class="c8 c1"
        >
          Adidas
        </td>
        <td
          class="c8 c1"
        >
          4
        </td>
        <td
          class="c8 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c5 c1"
      >
        <td
          class="c8 c1"
        >
          North Face
        </td>
        <td
          class="c8 c1"
        >
          5
        </td>
        <td
          class="c8 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly for a table with a footer 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  padding: 0.5rem;
}

.c6 {
  font-weight: bold;
}

.c6 {
  border-top: 2px solid #b3b3b3;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c4 {
  font-weight: bold;
  padding: 0.5rem;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <thead
      class="c3 c1"
    >
      <tr
        class="c1"
      >
        <th
          class="c4 c1"
        >
          Name
        </th>
        <th
          class="c4 c1"
        >
          Quantity
        </th>
        <th
          class="c4 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c1"
    >
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Nike
        </td>
        <td
          class="c5 c1"
        >
          3
        </td>
        <td
          class="c5 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Adidas
        </td>
        <td
          class="c5 c1"
        >
          4
        </td>
        <td
          class="c5 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          North Face
        </td>
        <td
          class="c5 c1"
        >
          5
        </td>
        <td
          class="c5 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c6 c1"
    >
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Total
        </td>
        <td
          class="c5 c1"
        />
        <td
          class="c5 c1"
        >
          $36.00
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`renders correctly for a table with a top caption 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c3 {
  caption-side: top;
}

.c8 {
  padding: 0.5rem;
}

.c4 {
  border: unset;
}

.c4 {
  border-bottom: 2px solid #b3b3b3;
}

.c6 {
  font-weight: bold;
  padding: 0.5rem;
}

.c9 .c5 {
  border-bottom: 1px solid #b3b3b3;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c10 .c7 .c5:nth-child(even) {
  background-color: #f7f7f7;
}

.c11 .c7 .c5:hover {
  background-color: #f2f2f2 !important;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <caption
      class="c3 c1"
      style="position: top;"
    >
      Fannypacks
    </caption>
    <thead
      class="c4 c1"
    >
      <tr
        class="c5 c1"
      >
        <th
          class="c6 c1"
        >
          Name
        </th>
        <th
          class="c6 c1"
        >
          Quantity
        </th>
        <th
          class="c6 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c7 c1"
    >
      <tr
        class="c5 c1"
      >
        <td
          class="c8 c1"
        >
          Nike
        </td>
        <td
          class="c8 c1"
        >
          3
        </td>
        <td
          class="c8 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c5 c1"
      >
        <td
          class="c8 c1"
        >
          Adidas
        </td>
        <td
          class="c8 c1"
        >
          4
        </td>
        <td
          class="c8 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c5 c1"
      >
        <td
          class="c8 c1"
        >
          North Face
        </td>
        <td
          class="c8 c1"
        >
          5
        </td>
        <td
          class="c8 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
